force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Header_Signature_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Header_Signature_Parameter__c</fullName>
    <description>The parameter in the header that is being used to pass the digest signature of the payload.  Example, for Github, the header parameter is &quot;X-Hub-Signature-256&quot;</description>
    <inlineHelpText>The parameter in the header that is being used to pass the digest signature of the payload.  Example, for Github, the header parameter is &quot;X-Hub-Signature-256&quot;</inlineHelpText>
    <label>Header Signature Parameter</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>